# signate-fundamental-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: predictor.py
